# ESN

./: .gitignore  .gitmodules  ESN_mine.py  HP_search_kerastuner.ipynb  Model_trainer.ipynb  README.md  custom_callbacks.py  custom_initializers.py  custom_layers.py  custom_models.py  custom_reservoirs.py  environment.yml  forecast_with_best_model.py  forecasters.py  functions.py  gred_script.py  grid.py  grid_script.py  grid_tools.py  main.ipynb  main.py  model_functions.py  model_instantiators.py  plots.ipynb  plotters.py  pyproject.toml  readout_generators.py  requirements.txt  setup.py  t_utils.py  tmain.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
LZ/: LZ.py  README.md  binarize.py  distance_matrix.py  entropy_map.py  lz.py  main.py  plotters.py  utils.py
LZ_D/: Lorenz_dt0.02_steps30000_t-end600.0_seed397556.csv  lz.py  lz_utils.py  seq1  seq1.lz76  seqs  seqs.lz76  tempfile.txt.lz76
cli/: __init__.py  aux.py  enums.py  forecast.py  grid.py  lempelziv.py  model.py  plot.py  train.py
docs/: Makefile  README.md  advanced_usage.md  conf.py  hyperparameter_optimization.md  index.md  rationale.md  requirements.txt
docs/Guides/: how_it_works.md  when_to_use.md
docs/Tutorials/: basic_forecasting.md  custom_reservoirs.md  hpo.md  multi_input.md
docs/_templates/autosummary/: class.rst
docs/api/: index.rst
grid/: KS.sh  Lorenz.sh
lempelziv/: __init__.py  lz_utils.py
prediction_window/: prediction_window.json  prediction_window_script.py
recalculating_unfinished_processes/: unfinished_search.py
research/grid/: const.py  grid.py  tools.py
research/plots/: __init__.py  systems.py
scripts/: KS.sh  KS_batch.sh  KS_batch_short.sh  KS_batch_testing.sh  KS_cpu.sh  KS_gpu.sh  KS_gpu_threads.sh  base.sh  f_threads.sh  lorenz.sh  lorenz_sbatch_cpu.sh  lorenz_srun_cpu.sh  test.sh  test_medium.sh  test_short.sh  test_testing.sh
scripts/KS/: ks_35_N128.sh  ks_35_N256.sh  ks_35_N64.sh
scripts/Lorenz/: find.sh  lorenz.sh  lorenz_gpu.sh  lorenz_test_cpu.sh  lorenz_test_gpu.sh  lorenz_test_gpu_1.sh  lorenz_test_gpu_2.sh
scripts/MG/: mg_16.8.sh  mg_17.sh  mg_30.sh
scripts/sbatch_test/: KS_batch_medium.sh  KS_batch_short.sh  KS_batch_testing.sh  array_test.sh  test_medium.sh  test_short.sh  test_testing.sh
slurm_grid/: const.py  grid.py  tools.py
slurm_grid/steps_len/: steps_len_0.json  steps_len_1.json  steps_len_2.json  steps_len_3.json
src/: forecasters.py  functions.py  model.py  model_instantiators.py  readout_generators.py  utils.py
src/customs/: custom_callbacks.py  custom_initializers.py  custom_layers.py  custom_models.py  custom_reservoirs.py
src/grid/: combinations.json  grid.py  grid_one.py  grid_one_modified.py  grid_script.py  grid_script_threads.py  grid_tools.py  intervals_len.json  new_combinations.py  tools.py
src/grid/files/: steps.json
src/keras_reservoir_computing/: __init__.py  _version.py  exceptions.py
src/keras_reservoir_computing/analysis/: __init__.py  states.py
src/keras_reservoir_computing/callbacks/: __init__.py  warmup.py
src/keras_reservoir_computing/forecasting/: __init__.py  file_forecasting.py  forecasting.py
src/keras_reservoir_computing/hpo/: __init__.py  _losses.py  _objective.py  _utils.py  main.py  validators.py  worker.py
src/plots/: results.py  systems.py
src/systems/: KS.py  LogisticMap1.py  Lorenz.py  functions.py  logisticMap.py  mackey.py  main.py
systems/: KS.py  Lorenz.py  Mackey.py  Rossler.py  functions.py  mackey.py  main.py
systems/KS/: KS.py  KSanimate.py
test/: ESN_mine.py  array_test.sh  forecast_with_best_model.py  test.py  test.sh
(+141 files in other folders)
